@@ -21,7 +21,7 @@
         <assertj.version>3.11.1</assertj.version>
         <tiles-maven-plugin.version>2.12</tiles-maven-plugin.version>
         <kemitix-maven-tiles.version>1.3.1</kemitix-maven-tiles.version>
-        <kemitix-checkstyle.version>4.0.1</kemitix-checkstyle.version>
+        <kemitix-checkstyle.version>5.2.0</kemitix-checkstyle.version>
 
         <pitest.coverage>100</pitest.coverage>
         <pitest.mutation>100</pitest.mutation>
