@@ -4,6 +4,7 @@ CHANGELOG
 0.4.1
 -----
 
+* Bump kemitix-checkstyle-ruleset from 4.0.1 to 5.2.0 (#30)
 * Bump tiles-maven-plugin from 2.11 to 2.12 (#23)
 * Bump kemitix-parent from 5.1.0 to 5.2.0 (#21)(#27)
 * Bump assertj-core from 3.9.1 to 3.11.1 (#26)
